Added doc for predict().

--- a/Locally Weighted Regression/locally_weighted_reg.ipynb
+++ b/Locally Weighted Regression/locally_weighted_reg.ipynb
@@ -229,6 +229,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In Action"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -246,7 +253,6 @@
     }
    ],
    "source": [
-    "\n",
     "res = predict(X,y,x = 10.5,tou = 0.05,alpha = 0.1,iterations = 1500)\n",
     "print()\n",
     "print('The Prediction for given x is:')\n",
